[tool.poetry]
name = "apexbtbot"
version = "0.1.0"
description = ""
authors = ["Neel Patel <patel.neel5@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.9"
web3 = "^7.6.1"
requests = "^2.32.3"
cryptography = "^44.0.0"
python-dotenv = "^1.0.1"
virtuals-sdk = "^0.1.3"
solders = "^0.23.0"
solana = "^0.36.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "scripts:bot"
